plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.joshfouchey.smsarchive'
version = '0.0.1-SNAPSHOT'
description = 'sms-archive'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Database & migration
    implementation "org.flywaydb:flyway-core:11.13.2"
    implementation "org.flywaydb:flyway-database-postgresql:11.13.2"
    implementation 'org.postgresql:postgresql'
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'

    // JSONB support for Postgres
    implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.11.0'

    // JAXB (needed for XML parsing if not included by default)
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.4'

    // Utils
    implementation 'commons-io:commons-io:2.15.1'
    implementation'net.coobird:thumbnailator:0.4.21'
    // Lombok
    implementation 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    // Test
    testImplementation("org.springframework.boot:spring-boot-starter-test:3.5.6")
    testImplementation 'com.h2database:h2:2.4.240'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}
